--- a/public/css/bootstrap.css
+++ b/public/css/bootstrap.css
@@ -3636,9 +3636,10 @@ tbody.collapse.in {
 }
 .dropdown-menu > li > a:hover,
 .dropdown-menu > li > a:focus {
-  color: #262626;
+  color: black;
+  font-weight:bold;
   text-decoration: none;
-  background-color: #f5f5f5;
+  background-color: orange;
 }
 .dropdown-menu > .active > a,
 .dropdown-menu > .active > a:hover,
